design: contents>visual 영역 html, css 완성

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
           <a href="#" class="contact">contact</a>
         </div>
       </header>
+      <!-- contents -->
+      <div class="contents">
+        <section class="visual">
+          <video
+            src="img/waves.mp4"
+            autoplay
+            muted
+            loop
+            playsinline
+            class="waves"
+          ></video>
+          <h2 class="title">CREW A LA MODE</h2>
+        </section>
+      </div>
     </div>
   </body>
 </html>
